Initial commit for EESP Workshop 2025 website

--- a/index.html
+++ b/index.html
@@ -8,37 +8,95 @@
 </head>
 <body>
     <header>
+        <img src="assets/a.png" alt="EESP Workshop Logo" style="max-width: 100%; height: auto;">
         <h1>EESP Workshop 2025</h1>
-        <p>Energy Efficiency with Sustainable Performance</p>
+        <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
+        <p>June 10, 2025, Hamburg, Germany</p>
         <p>In conjunction with ISC High Performance 2025</p>
     </header>
 
     <main>
-        <section id="about">
-            <h2>About the Workshop</h2>
-            <p>The EESP workshop focuses on innovative strategies to enhance energy efficiency in computing environments, providing insights into greener, cost-effective practices for exascale and Tier-1/2 centers.</p>
-        </section>
+        <div style="display: flex;">
+            <div style="flex: 3;">
+                <section id="objective">
+                    <h2>Workshop Objective</h2>
+                    <p>The EESP workshop fosters the exchange of innovative strategies, tools, and best practices to enhance energy efficiency in computing environments. Amid rising energy costs and ambitious sustainability goals, optimizing energy use is critical for managing computing infrastructure. The workshop focuses on balancing performance, power consumption, and sustainability, offering practical guidance for exascale, Tier-1, and Tier-2 centers. Attendees will gain insights into greener, cost-effective practices to drive sustainability. Aligned with Sustainable Development Goals, EESP bridges HPC and AI communities, empowering operators to reduce Power Usage Effectiveness (PUE), source green energy, and help users make energy-conscious decisions. It highlights sustained performance over peak performance for future competitiveness.</p>
+                </section>
 
-        <section id="dates">
-            <h2>Important Dates</h2>
-            <ul>
-                <li>Submission Deadline: February 20, 2025 (extended: March 1, 2025)</li>
-                <li>Notification: March 28, 2025</li>
-                <li>Camera-Ready Deadline: April 30, 2025</li>
-                <li>Workshop: June 10, 2025</li>
-            </ul>
-        </section>
+                <section id="scope">
+                    <h2>Workshop Scope</h2>
+                    <p>EESP invites academia, supercomputing centers, industry, and policymakers to collaborate on advancing energy-efficient practices. Topics include software development, hardware design, and energy-efficient practices across various computing environments such as HPC clusters, data centers, and cloud infrastructure. Energy efficiency is a growing challenge, particularly for Tier-2 centers with limited resources. This workshop fosters dialogue between Tier-0/1 and Tier-2 centers to adapt Tier-0/1 innovations for constrained budgets. It targets financial and technical solutions applicable to HPC clusters, data centers, and cloud infrastructures globally.</p>
+                </section>
 
-        <section id="cfp">
-            <h2>Call for Papers</h2>
-            <p>We invite academia, supercomputing centers, and industry to submit papers on energy-efficient computing practices. Topics include:</p>
-            <ul>
-                <li>Energy-aware software optimization</li>
-                <li>Energy-efficient hardware practices</li>
-                <li>Energy-efficient scheduling and resource management</li>
-                <li>Renewable energy sources for HPC systems</li>
-            </ul>
-        </section>
+                <section id="topics">
+                    <h2>Topics of Interest</h2>
+                    <p>The workshop aims to benefit the broader community by sharing use cases, lessons learned, and best practices through descriptive papers. We solicit papers which encompass the following topics of interest, but are not limited to:</p>
+                    <ul>
+                        <li>Energy efficiency in computing environments</li>
+                        <li>Energy-aware software optimization techniques</li>
+                        <li>Energy-efficient hardware architectures and practices</li>
+                        <li>Energy-efficient scheduling and resource management</li>
+                        <li>Tools for power and energy monitoring and analysis</li>
+                        <li>Energy models for CPUs and GPUs, along with behavioral insights</li>
+                        <li>Cluster-wide energy benchmarking with continuous regression analysis</li>
+                        <li>Comparative benchmarks of node and memory architectures</li>
+                        <li>Analysis of energy degradation over time in CPUs and GPUs</li>
+                        <li>Renewable energy sources for HPC systems</li>
+                        <li>Emerging trends and future challenges in energy consumption (e.g., AI and machine learning workloads)</li>
+                        <li>Metrics for energy-efficient sustainable performance</li>
+                    </ul>
+                </section>
+
+                <section id="cfp">
+                    <h2>Call for Papers</h2>
+                    <p>Papers should be either short (work-in-progress, 6 pages) or regular (12 pages), including references and appendices, with an option for two additional pages after review to address reviewer feedback. Each submission will undergo a minimum of three single-blind peer reviews. Review criteria will include the originality, technical soundness, potential impact, significance, and quality of presentation.</p>
+                    <p>Papers must be submitted online via the EasyChair system in PDF format, using the Springer Lecture Notes in Computer Science (LNCS) template. The accepted papers will be published along with the ISC proceedings as part of the Springer LNCS series.</p>
+                </section>
+
+                <section id="organization">
+                    <h2>Workshop General Chair</h2>
+                    <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
+
+                    <h2>Program Chair</h2>
+                    <ul>
+                        <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
+                        <li>Natalie Bates - EE HPC WG</li>
+                        <li>Siddhartha Jana - Intel (unconfirmed)</li>
+                    </ul>
+
+                    <h2>Proceedings Chair</h2>
+                    <p>Radita Liem - RWTH Aachen University</p>
+
+                    <h2>Program Committee</h2>
+                    <p>Details available on the website.</p>
+
+                    <h2>Collaborators</h2>
+                    <ul>
+                        <li>Erlangen National High Performance Computing Center (NHR@FAU)</li>
+                        <li>EE HPC WG</li>
+                    </ul>
+                </section>
+
+                <section id="contact">
+                    <h2>Contact</h2>
+                    <p>For questions, please contact the General Chair: <strong>Ayesha Afzal</strong> at <a href="mailto:ayesha.afzal@fau.de">ayesha.afzal@fau.de</a>.</p>
+                </section>
+            </div>
+
+            <div style="flex: 1; padding-left: 20px;">
+                <section id="announcements">
+                    <h2>Announcements</h2>
+                    <p><strong>Call for Paper</strong></p>
+                    <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p>
+                    <h3>Important Dates:</h3>
+                    <ul>
+                        <li><strong>Submission deadline:</strong> February 20, 2025, AoE</li>
+                        <li><strong>Notification:</strong> March 28, 2025, AoE</li>
+                        <li><strong>Camera ready deadline:</strong> April 30, 2025, AoE</li>
+                    </ul>
+                </section>
+            </div>
+        </div>
     </main>
 
     <footer>
