Initial commit for EESP Workshop 2025 website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/a.png" alt="EESP Workshop Logo" style="max-width: 100%; height: auto;">
+        <img src="assets/eesp-logo.png" alt="EESP Workshop Logo" style="max-width: 100%; height: auto;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
