--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="assets/eesp-logo.png" alt="EESP Workshop Logo" style="max-width: 100%; height: auto;">
+    <header style="background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed;">
+        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="max-width: 100%; height: auto;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
@@ -32,18 +32,18 @@
                     <h2>Topics of Interest</h2>
                     <p>The workshop aims to benefit the broader community by sharing use cases, lessons learned, and best practices through descriptive papers. We solicit papers which encompass the following topics of interest, but are not limited to:</p>
                     <ul>
-                        <li>Energy efficiency in computing environments</li>
-                        <li>Energy-aware software optimization techniques</li>
-                        <li>Energy-efficient hardware architectures and practices</li>
+                        <li>Energy efficiency analysis in computing environments</li>
+                        <li>Energy-aware software optimization techniques for HPC & AI</li>
+                        <li>Energy-efficient hardware architectures and practices for HPC & AI</li>
                         <li>Energy-efficient scheduling and resource management</li>
-                        <li>Tools for power and energy monitoring and analysis</li>
-                        <li>Energy models for CPUs and GPUs, along with behavioral insights</li>
+                        <li>Sustainable data centre operation and design</li>
+                        <li>Metrics for energy-efficient sustainable performance</li>
                         <li>Cluster-wide energy benchmarking with continuous regression analysis</li>
                         <li>Comparative benchmarks of node and memory architectures</li>
-                        <li>Analysis of energy degradation over time in CPUs and GPUs</li>
+                        <li>Energy modeling, measurement and behavioral insights for CPUs and GPUs</li>
+                        <li>Tools for power and energy monitoring, management and control</li>
                         <li>Renewable energy sources for HPC systems</li>
                         <li>Emerging trends and future challenges in energy consumption (e.g., AI and machine learning workloads)</li>
-                        <li>Metrics for energy-efficient sustainable performance</li>
                     </ul>
                 </section>
 
