--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header style="background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed;">
-        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="width: 200px; height: auto; margin: 20px auto; display: block;">
+        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin: 20px auto; display: block;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
