--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header style="background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed;">
+    <header>
         <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin: 20px auto; display: block;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
