--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin: 20px auto; display: block;">
+    
+<header style="display: flex; align-items: center; background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed; padding: 20px;">
+    <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin-right: 20px;">
+    <div>
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
         <p>In conjunction with ISC High Performance 2025</p>
-    </header>
+    </div>
+</header>
 
     <main>
         <div style="display: flex;">
