--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<header style="display: flex; align-items: center; background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed; padding: 20px;">
+<header>
     <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin-right: 20px;">
     <div>
         <h1>EESP Workshop 2025</h1>
