--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     
-<header>
-    <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; margin-right: 20px;">
-    <div>
+<header style="display: flex; align-items: center; justify-content: space-between; padding: 20px; background-image: url('assets/b.png'); background-size: cover; background-position: center; background-attachment: fixed;">
+    <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; flex-shrink: 0;">
+    <div style="text-align: center; margin: 0 auto; flex-grow: 1;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
