--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<header style="display: flex; align-items: center; justify-content: space-between; padding: 20px; background-color: #f4f4f4;">
+<header>
     <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 100px; width: auto; flex-shrink: 0;">
     <div style="text-align: center; margin: 0 auto; flex-grow: 1;">
         <h1>EESP Workshop 2025</h1>
