--- a/index.html
+++ b/index.html
@@ -52,9 +52,35 @@
 
                 <section id="cfp">
                     <h2>Call for Papers</h2>
-                    <p>Papers should be either short (work-in-progress, 6 pages) or regular (12 pages), including references and appendices, with an option for two additional pages after review to address reviewer feedback. Each submission will undergo a minimum of three single-blind peer reviews. Review criteria will include the originality, technical soundness, potential impact, significance, and quality of presentation.</p>
-                    <p>Papers must be submitted online via the EasyChair system in PDF format, using the Springer Lecture Notes in Computer Science (LNCS) template. The accepted papers will be published along with the ISC proceedings as part of the Springer LNCS series.</p>
+                    <p>The EESP Workshop 2025 invites papers in the following categories:</p>
+                    <ul>
+                        <li><strong>Types of Submissions:</strong>
+                            <ul>
+                                <li><strong>Short Papers:</strong> Work-in-progress papers (6 pages including references and appendices).</li>
+                                <li><strong>Regular Papers:</strong> Full-length papers (12 pages including references and appendices).</li>
+                            </ul>
+                        </li>
+                        <li><strong>Submission Guidelines:</strong>
+                            <ul>
+                                <li>Use the Springer Lecture Notes in Computer Science (LNCS) template.</li>
+                                <li>Submit papers in PDF format through the EasyChair submission system.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Review Process:</strong>
+                            <ul>
+                                <li>Each submission will undergo a minimum of three single-blind peer reviews.</li>
+                                <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Post-Submission:</strong>
+                            <ul>
+                                <li>Accepted papers will be published as part of the ISC proceedings in the Springer LNCS series.</li>
+                                <li>There is an option for submitting two additional pages after the review to address reviewer feedback.</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </section>
+
 
                 <section id="organization">
                     <h2>Workshop General Chair</h2>
