--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     <ul>
                         <li><strong>Submission Guidelines:</strong>
                             <ul>
-                                <li><strong>Short Papers:</strong> Work-in-progress papers (6 pages including references and appendices).</li>
-                                <li><strong>Regular Papers:</strong> Full-length papers (12 pages including references and appendices).</li>
+                                <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
                                 <li>Use the Springer Lecture Notes in Computer Science (LNCS) template.</li>
                                 <li>Submit papers in PDF format through the EasyChair submission system.</li>
                             </ul>
@@ -76,6 +75,7 @@
                         </li>
                     </ul>
                 </section>
+
 
 
 
