--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <section id="cfp">
                     <h2>Call for Papers</h2>
-                    <p>The EESP Workshop 2025 invites papers in the following categories:</p>
+                    <p>The EESP Workshop 2025 invites submissions of high-quality research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.:</p>
                     <ul>
                         <li><strong>Submission Guidelines:</strong>
                             <ul>
