--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <ul>
                         <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
                         <li>Natalie Bates - EE HPC WG</li>
-                        <li>Siddhartha Jana - Intel (unconfirmed)</li>
+                        <li>Siddhartha Jana - Intel</li>
                     </ul>
 
                     <h2>Proceedings Chair</h2>
