--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
                     <h2>Call for Papers</h2>
                     <p>The EESP Workshop 2025 invites submissions of high-quality research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.:</p>
                     <ul>
-                        <li><strong>Submission Guidelines:</strong>
+                        <li><strong>Submission Guidelines</strong>
                             <ul>
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
                                 <li>Use the Springer Lecture Notes in Computer Science (LNCS) template.</li>
                                 <li>Submit papers in PDF format through the EasyChair submission system.</li>
                             </ul>
                         </li>
-                        <li><strong>Review Process:</strong>
+                        <li><strong>Review Process</strong>
                             <ul>
                                 <li>Each submission will undergo a minimum of three single-blind peer reviews.</li>
                                 <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li>
                             </ul>
                         </li>
-                        <li><strong>Post-Submission:</strong>
+                        <li><strong>Post-Submission</strong>
                             <ul>
                                 <li>Accepted papers will be published as part of the ISC proceedings in the Springer LNCS series.</li>
                                 <li>There is an option for submitting two additional pages after the review to address reviewer feedback.</li>
@@ -94,7 +94,7 @@
                     <p>Radita Liem - RWTH Aachen University</p>
 
                     <h2>Program Committee</h2>
-                    <p>Details available on the website.</p>
+                    <p>The list of PC members will be added soon.</p>
 
                     <h2>Collaborators</h2>
                     <ul>
