--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
                 <section id="cfp">
                     <h2>Call for Papers</h2>
-                    <p>The EESP Workshop 2025 invites submissions of high-quality research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.:</p>
+                    <p>The EESP Workshop 2025 invites submissions of high-quality research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.</p>
                     <ul>
                         <li><strong>Submission Guidelines</strong>
                             <ul>
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
-                                <li>Use the Springer Lecture Notes in Computer Science (LNCS) template.</li>
+                                <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
                                 <li>Submit papers in PDF format through the EasyChair submission system.</li>
                             </ul>
                         </li>
