--- a/index.html
+++ b/index.html
@@ -96,12 +96,19 @@
                     <h2>Program Committee</h2>
                     <p>The list of PC members will be added soon.</p>
 
-                    <h2>Collaborators</h2>
-                    <ul>
-                        <li>Erlangen National High Performance Computing Center (NHR@FAU)</li>
-                        <li>EE HPC WG</li>
-                    </ul>
-                </section>
+                    <section id="collaborators">
+                        <h2>Collaborators</h2>
+                        <p>We thank our collaborators for their support:</p>
+                        <div style="display: flex; justify-content: space-around; flex-wrap: wrap;">
+                            <div style="margin: 10px;">
+                                <img src="assets/nhr-fau-logo.png" alt="Erlangen National High Performance Computing Center (NHR@FAU) Logo" style="height: 100px; width: auto;">
+                            </div>
+                            <div style="margin: 10px;">
+                                <img src="assets/ee-hpc-wg-logo.png" alt="EE HPC WG Logo" style="height: 100px; width: auto;">
+                            </div>
+                        </div>
+                    </section>
+
 
                 <section id="contact">
                     <h2>Contact</h2>
