--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                         <p>We thank our collaborators for their support:</p>
                         <div style="display: flex; justify-content: space-around; flex-wrap: wrap;">
                             <div style="margin: 10px;">
-                                <img src="assets/nhr-fau-logo.png" alt="Erlangen National High Performance Computing Center (NHR@FAU) Logo" style="height: 100px; width: auto;">
+                                <img src="assets/nhr-fau-logo.png" alt="Erlangen National High Performance Computing Center (NHR@FAU)" style="height: 100px; width: auto;">
                             </div>
                             <div style="margin: 10px;">
-                                <img src="assets/ee-hpc-wg-logo.png" alt="EE HPC WG Logo" style="height: 100px; width: auto;">
+                                <img src="assets/ee-hpc-wg-logo.png" alt="Energy Efficient High Performance Computing Working Group (EE HPC WG)" style="height: 100px; width: auto;">
                             </div>
                         </div>
                     </section>
