--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
 
                     <section id="collaborators">
                         <h2>Collaborators</h2>
-                        <p>We thank our collaborators for their support:</p>
-                        <div style="display: flex; justify-content: space-around; flex-wrap: wrap;">
-                            <div style="margin: 10px;">
-                                <img src="assets/nhr-fau-logo.png" alt="Erlangen National High Performance Computing Center (NHR@FAU)" style="height: 100px; width: auto;">
-                            </div>
-                            <div style="margin: 10px;">
-                                <img src="assets/ee-hpc-wg-logo.png" alt="Energy Efficient High Performance Computing Working Group (EE HPC WG)" style="height: 100px; width: auto;">
-                            </div>
-                        </div>
+                        <ul style="list-style-type: none; padding: 0;">
+                            <li style="display: flex; align-items: center; margin: 10px 0;">
+                                <img src="assets/nhr-fau-logo.png" alt="Erlangen National High Performance Computing Center (NHR@FAU) Logo" style="height: 50px; margin-right: 10px;">
+                                <span>Erlangen National High Performance Computing Center (NHR@FAU)</span>
+                            </li>
+                            <li style="display: flex; align-items: center; margin: 10px 0;">
+                                <img src="assets/ee-hpc-wg-logo.png" alt="EE HPC WG Logo" style="height: 50px; margin-right: 10px;">
+                                <span>EE HPC WG</span>
+                            </li>
+                        </ul>
                     </section>
+
 
 
                 <section id="contact">
