--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </li>
                             <li style="display: flex; align-items: center; margin: 10px 0;">
                                 <img src="assets/ee-hpc-wg-logo.png" alt="EE HPC WG Logo" style="height: 50px; margin-right: 10px;">
-                                <span>EE HPC WG</span>
+                                <span>Energy Efficient HPC Working Group (EE HPC WG) </span>
                             </li>
                         </ul>
                     </section>
