--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                     <p>Submission for EESP 2025 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p>
                     <h3>Important Dates:</h3>
                     <ul>
-                        <li><strong>Submission deadline:</strong> February 20, 2025, AoE</li>
-                        <li><strong>Notification:</strong> March 28, 2025, AoE</li>
-                        <li><strong>Camera ready deadline:</strong> April 30, 2025, AoE</li>
+                        <li>Submission deadline: February 20, 2025, AoE</li>
+                        <li>Notification: March 28, 2025, AoE</li>
+                        <li>Camera ready deadline: April 30, 2025, AoE</li>
                     </ul>
                 </section>
             </div>
