--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
-        <p>In conjunction with 
-            <a href="https://www.isc-hpc.com/" target="_blank">
-                <img src="assets/isc-logo-white-bg.png" alt="ISC High Performance 2025 Logo" style="height: 30px; vertical-align: middle; margin-left: 10px; background-color: white; padding: 5px;">
-            </a>
-        </p>
+        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank"><img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 30px; vertical-align: middle; margin-left: 10px;"></a></p>
     </div>
 </header>
 
