--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body>
     
-<header>
-    <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
-    <div style="text-align: center; margin: 0 auto; flex-grow: 1;">
+<header style="display: flex; justify-content: space-between; align-items: center;">
+    <div style="flex: 1; text-align: left;">
+        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
+    </div>
+    <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
-        <p>In conjunction with ISC High Performance 2025 <a href="https://www.isc-hpc.com/" target="_blank"><img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 30px; vertical-align: middle; margin-left: 10px;"></a></p>
+        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank">ISC High Performance 2025</a></p>
+    </div>
+    <div style="flex: 1; text-align: right;">
+        <a href="https://www.isc-hpc.com/" target="_blank">
+            <img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 30px; vertical-align: middle;">
+        </a>
     </div>
 </header>
+
 
 
     <main>
