--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <h1>EESP Workshop 2025</h1>
         <p>Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices</p>
         <p>June 10, 2025, Hamburg, Germany</p>
-        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank">ISC High Performance 2025</a></p>
+        <p>In conjunction with <a href="https://www.isc-hpc.com/" target="_blank" style="color: inherit; text-decoration: none;">ISC High Performance 2025</a></p>
     </div>
     <div style="flex: 1; text-align: right;">
         <a href="https://www.isc-hpc.com/" target="_blank">
-            <img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 30px; vertical-align: middle;">
+            <img src="assets/isc-logo.png" alt="ISC High Performance 2025 Logo" style="height: 150px; width: auto; vertical-align: middle;">
         </a>
     </div>
 </header>
+
 
 
 
