--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h2>Workshop General Chair</h2>
                     <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
 
-                    <h2>Program Chair</h2>
+                    <h2>Program Co-Chairs</h2>
                     <ul>
                         <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
                         <li>Natalie Bates - EE HPC WG</li>
