--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <ul>
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
-                                <li>Submit papers in PDF format through the EasyChair submission system.</li>
+                                <li>Submit papers in PDF format through the <a href="https://easychair.org/conferences?conf=eesp25" target="_blank">EasyChair submission system</a>.</li>
                             </ul>
                         </li>
                         <li><strong>Review Process</strong>
