--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 
                 <section id="organization">
                     <h2>Workshop General Chair</h2>
-                    <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
+                    <div style="display: flex; align-items: center;">
+                        <img src="assets/Ayesha.png" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
+                        <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
+                    </div>
 
                     <h2>Program Co-Chairs</h2>
                     <ul>
