--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <section id="cfp">
                     <h2>Call for Papers</h2>
-                    <p>The EESP Workshop 2025 invites submissions of high-quality research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.</p>
+                    <p>The EESP Workshop 2025 invites submissions of research papers focused on energy efficiency and sustainable performance in high-performance computing and artificial intelligence.</p>
                     <ul>
                         <li><strong>Submission Guidelines</strong>
                             <ul>
@@ -89,7 +89,7 @@
                 <section id="organization">
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
-                        <img src="assets/Ayesha.png" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
+                        <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
                         <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
                     </div>
 
