--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </li>
                         <li><strong>Post-Submission</strong>
                             <ul>
-                                <li>Accepted papers will be published as part of the ISC proceedings in the Springer LNCS series.</li>
+                                <li>Accepted papers will be published as part of the <strong>ISC proceedings in the Springer LNCS series</strong>.</li>
                                 <li>There is an option for submitting two additional pages after the review to address reviewer feedback.</li>
                             </ul>
                         </li>
