--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
                         <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
-                        <p>Ayesha Afzal - Erlangen National High Performance Computing Center</p>
+                        <p><strong>Ayesha Afzal</strong> - Erlangen National High Performance Computing Center</p>
                     </div>
 
                     <h2>Program Co-Chairs</h2>
