--- a/index.html
+++ b/index.html
@@ -103,7 +103,14 @@
                     <p>Radita Liem - RWTH Aachen University</p>
 
                     <h2>Program Committee</h2>
-                    <p>The list of PC members will be added soon.</p>
+                    <ul>
+                        <li>Diana Goehringer, TU Dresden</li>
+                        <li>Martin Frank, Karlsruhe Institute of Technology</li>
+                        <li>Matthias Maiterth, Oak Ridge National Laboratory</li>
+                        <li>Michael Ott, Leibniz Supercomputing Centre</li>
+                        <li>Markus Rampp, Max Planck Computing and Data Facility (MPCDF)</li>
+                    </ul>
+                    <p>The full list of PC members will be added soon.</p>
 
                     <section id="collaborators">
                         <h2>Collaborators</h2>
