--- a/index.html
+++ b/index.html
@@ -104,13 +104,14 @@
 
                     <h2>Program Committee</h2>
                     <ul>
-                        <li>Diana Goehringer, TU Dresden</li>
-                        <li>Martin Frank, Karlsruhe Institute of Technology</li>
-                        <li>Matthias Maiterth, Oak Ridge National Laboratory</li>
-                        <li>Michael Ott, Leibniz Supercomputing Centre</li>
-                        <li>Markus Rampp, Max Planck Computing and Data Facility (MPCDF)</li>
+                        <li style="color: #0078D7;">Diana Goehringer, TU Dresden</li> <!-- Blue -->
+                        <li style="color: #E67E22;">Martin Frank, Karlsruhe Institute of Technology</li> <!-- Orange -->
+                        <li style="color: #28A745;">Matthias Maiterth, Oak Ridge National Laboratory</li> <!-- Green -->
+                        <li style="color: #6C63FF;">Michael Ott, Leibniz Supercomputing Centre</li> <!-- Purple -->
+                        <li style="color: #FFD700;">Markus Rampp, Max Planck Computing and Data Facility (MPCDF)</li> <!-- Gold -->
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
+
 
                     <section id="collaborators">
                         <h2>Collaborators</h2>
