--- a/index.html
+++ b/index.html
@@ -104,13 +104,14 @@
 
                     <h2>Program Committee</h2>
                     <ul>
-                        <li style="color: #0078D7;">Diana Goehringer, TU Dresden</li> <!-- Blue -->
-                        <li style="color: #E67E22;">Martin Frank, Karlsruhe Institute of Technology</li> <!-- Orange -->
-                        <li style="color: #28A745;">Matthias Maiterth, Oak Ridge National Laboratory</li> <!-- Green -->
-                        <li style="color: #6C63FF;">Michael Ott, Leibniz Supercomputing Centre</li> <!-- Purple -->
-                        <li style="color: #FFD700;">Markus Rampp, Max Planck Computing and Data Facility (MPCDF)</li> <!-- Gold -->
+                        <li><span style="color: #0078D7;">Diana Goehringer</span>, TU Dresden</li>
+                        <li><span style="color: #0078D7;">Martin Frank</span>, Karlsruhe Institute of Technology</li>
+                        <li><span style="color: #0078D7;">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
+                        <li><span style="color: #0078D7;">Michael Ott</span>, Leibniz Supercomputing Centre</li>
+                        <li><span style="color: #0078D7;">Markus Rampp</span>, Max Planck Computing and Data Facility (MPCDF)</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
+
 
 
                     <section id="collaborators">
