--- a/index.html
+++ b/index.html
@@ -102,15 +102,16 @@
                     <h2>Proceedings Chair</h2>
                     <p>Radita Liem - RWTH Aachen University</p>
 
-                    <h2>Program Committee</h2>
+                    <h2 class="theme-color">Program Committee</h2>
                     <ul>
-                        <li><span style="color: #0078D7;">Diana Goehringer</span>, TU Dresden</li>
-                        <li><span style="color: #0078D7;">Martin Frank</span>, Karlsruhe Institute of Technology</li>
-                        <li><span style="color: #0078D7;">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
-                        <li><span style="color: #0078D7;">Michael Ott</span>, Leibniz Supercomputing Centre</li>
-                        <li><span style="color: #0078D7;">Markus Rampp</span>, Max Planck Computing and Data Facility (MPCDF)</li>
+                        <li><span class="theme-color">Diana Goehringer</span>, TU Dresden</li>
+                        <li><span class="theme-color">Martin Frank</span>, Karlsruhe Institute of Technology</li>
+                        <li><span class="theme-color">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
+                        <li><span class="theme-color">Michael Ott</span>, Leibniz Supercomputing Centre</li>
+                        <li><span class="theme-color">Markus Rampp</span>, Max Planck Computing and Data Facility (MPCDF)</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
+
 
 
 
