--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                         <li><span class="theme-color">Martin Frank</span>, Karlsruhe Institute of Technology</li>
                         <li><span class="theme-color">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
                         <li><span class="theme-color">Michael Ott</span>, Leibniz Supercomputing Centre</li>
-                        <li><span class="theme-color">Markus Rampp</span>, Max Planck Computing and Data Facility (MPCDF)</li>
+                        <li><span class="theme-color">Markus Rampp</span>, Max Planck Computing and Data Facility</li>
+                        <li><span class="theme-color">Zhengji Zhao</span>, Lawrence Berkeley National Laboratory</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
 
