--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
                         <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
-                        <p><strong>Ayesha Afzal</strong> - Erlangen National High Performance Computing Center</p>
+                        <p><strong>Ayesha Afzal</strong> - Erlangen National High Performance Computing Center (NHR@FAU)</p>
                     </div>
 
                     <h2>Program Co-Chairs</h2>
                     <ul>
                         <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
-                        <li>Natalie Bates - EE HPC WG</li>
+                        <li>Natalie Bates - Energy Efficient HPC Working Group (EE HPC WG)</li>
+                        <li>Siddhartha Jana - Intel</li>
                     </ul>
 
                     <h2>Proceedings Chair</h2>
