--- a/index.html
+++ b/index.html
@@ -93,23 +93,25 @@
                         <p><strong>Ayesha Afzal</strong> - Erlangen National High Performance Computing Center (NHR@FAU)</p>
                     </div>
 
-                    <h3>Program Co-Chairs</h3>
+                    <h4>Program Co-Chairs</h4>
                     <ul>
                         <li>Sarah Neuwirth - Johannes Gutenberg University Mainz</li>
                         <li>Natalie Bates - Energy Efficient HPC Working Group (EE HPC WG)</li>
                         <li>Siddhartha Jana - Intel</li>
                     </ul>
 
-                    <h3>Proceedings Chair</h3>
+                    <h4>Proceedings Chair</h4>
                     <p>Radita Liem - RWTH Aachen University</p>
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
                         <li><span class="theme-color">Diana Goehringer</span>, TU Dresden</li>
+                        <li><span class="theme-color">Harald Koestler</span>, Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
                         <li><span class="theme-color">Martin Frank</span>, Karlsruhe Institute of Technology</li>
                         <li><span class="theme-color">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
                         <li><span class="theme-color">Michael Ott</span>, Leibniz Supercomputing Centre</li>
                         <li><span class="theme-color">Markus Rampp</span>, Max Planck Computing and Data Facility</li>
+                        <li><span class="theme-color">Thomas Gruber</span>, Erlangen National High Performance Computing Center</li>
                         <li><span class="theme-color">Zhengji Zhao</span>, Lawrence Berkeley National Laboratory</li>
                     </ul>
                     <p>The full list of PC members will be added soon.</p>
