--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                     <h2 class="theme-color">Program Committee</h2>
                     <ul>
-                        <li><span style="color: #005f73;">Diana Goehringer</span>, TU Dresden</li>
+                        <li><span style="color: #005f73;">Diana Goehringer</span>, Technische Universität Dresden</li>
                         <li><span style="color: #005f73;">Harald Köstler</span>, Friedrich-Alexander-Universität Erlangen-Nürnberg</li>
                         <li><span style="color: #005f73;">Martin Frank</span>, Karlsruhe Institute of Technology</li>
                         <li><span style="color: #005f73;">Matthias Maiterth</span>, Oak Ridge National Laboratory</li>
